--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,10 @@
   background-position: center;
 }
 
+body {
+  scroll-behavior: smooth;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
